[package]
name = "cadentis"
version = "0.1.0"
edition = "2024"

authors = ["Enzo Blain"]
license = "SSPL-1.0"
description = "A lightweight async runtime with a work-stealing executor, non-blocking I/O, and minimal API surface."
repository = "https://github.com/nebula-platform/cadentis"
homepage = "https://github.com/nebula-platform/cadentis"
documentation = "https://docs.rs/cadentis"

readme = "README.md"

keywords = [
    "async",
    "runtime",
    "executor",
    "reactor",
    "work-stealing",
]

categories = [
    "asynchronous",
    "concurrency",
    "network-programming",
]

[dependencies]
libc = "0.2.180"
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_Networking_WinSock",
    "Win32_Storage_FileSystem",
    "Win32_Security"
] }
cadentis-macros = { workspace = true }